RESOLVED FIXED44067
Single-character replace does not substitute metachars
https://bugs.webkit.org/show_bug.cgi?id=44067
Summary Single-character replace does not substitute metachars
Chris Leary
Reported 2010-08-16 12:35:23 PDT
Steps to reproduce: Command: jsc -e 'print(")".replace(")", "*$&*"))' Actual: *$&* Expected: *)* References: ECMAv5:15.5.4.11
Attachments
Patch to fix single character search string optimization. (1.68 KB, patch)
2010-08-19 17:16 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2010-08-19 17:16:50 PDT
Created attachment 64914 [details] Patch to fix single character search string optimization. Added check to only execute single character replace() optimization if there aren't any back references by checking for existence of '$' in replace string.
WebKit Commit Bot
Comment 2 2010-08-23 16:13:34 PDT
Comment on attachment 64914 [details] Patch to fix single character search string optimization. Clearing flags on attachment: 64914 Committed r65840: <http://trac.webkit.org/changeset/65840>
WebKit Commit Bot
Comment 3 2010-08-23 16:13:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.