2010-08-23  Michael Saboff  <msaboff@apple.com>

Reviewed by Oliver Hunt.

        Fixed case where a single character search string in a string.replace()
        did not properly handle back reference replacement.  The fix is to
        check for a '$' as part of the check to see if we can execute the
        single character replace optimization.
        https://bugs.webkit.org/show_bug.cgi?id=44067

        * runtime/StringPrototype.cpp:
        (JSC::stringProtoFuncReplace):

Canonical link: https://commits.webkit.org/56619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65840 268f45cc-cd09-0410-ab3c-d52691b4dbfc